# ultima4-python

./: .gitignore  .mcp.json  CLAUDE.md  README.md  run
.claude/skills/live-demo/: SKILL.md
.claude/skills/rename-tile/: SKILL.md
u4py/: README.md  ROADMAP.md  play.py  pyproject.toml  requirements.txt
u4py/data/: PARTY.SAV
u4py/data/dialogue/: Britain.json  Cove.json  Den.json  Empath.json  Jhelom.json  Lcb.json  Lycaeum.json  Magincia.json  Minoc.json  Moonglow.json  Paws.json  Serpent.json  Skara.json  Trinsic.json  Vesper.json  Yew.json
u4py/data/intro/: cards.json  menus.json  narrative.json  questions.json
u4py/data/maps/: abyss.dng.txt  britain.txt  cove.txt  covetous.dng.txt  deceit.dng.txt  den.txt  despise.dng.txt  destard.dng.txt  empath.txt  hythloth.dng.txt  jhelom.txt  lcb_1.txt  lcb_2.txt  lycaeum.txt  magincia.txt  minoc.txt  moonglow.txt  paws.txt  serpent.txt  shame.dng.txt  skara.txt  trinsic.txt  vesper.txt  world.txt  wrong.dng.txt  yew.txt
u4py/docs/: AGENTS.md  TILES.md
u4py/examples/: __init__.py  random_agent.py
u4py/tools/: agent_play.py  agent_repl.py  convert_graphics.py  convert_maps.py  demo.py  dump_dialogue.py  dump_tiles.py  extract_intro.py  gen_reference.py  inspect_save.py  lzw.py  newgame.py  render_view.py  selftest.py  smoke.py  talk_demo.py  watch_agent.py
u4py/ultima4/: __init__.py  asciimap.py  character_creation.py  combat.py  constants.py  data_tables.py  demo.py  demo_scenarios.py  dialogue.py  dungeon.py  endgame.py  env.py  game.py  graphics.py  hazards.py  intro.py  intro_data.py  items.py  lb.py  live_window.py  location.py  mixing.py  monsters.py  moongate.py  savefile.py  shops.py  shrines.py  spells.py  stage.py  state.py  textwin.py  tiles.py  title_anim.py  transport.py  upkeep.py  world.py
u4py/ultima4/agent/: __init__.py  editor.py  mcp_server.py  rpc.py  tutor.py
u4py/ultima4/knowledge/: __init__.py  quest_graph.py
